// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled root color-night600 container"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={null}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#accept-12.svg"
      />
    </svg>
  </div>
</button>
`;

exports[`MainMenuIcon should be rendered correctly with props 1`] = `
<a
  className="container uui-button-box uui-enabled -clickable root color-night600 container"
  onClick={[Function]}
  role="link"
  tabIndex={null}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#accept-12.svg"
      />
    </svg>
  </div>
</a>
`;
